Talk about modules for OTS. Some typos fixes. Rename q to q' in OTS section for notational consistency. Def of concrete OTS says what the key and sig space is in caption.

--- a/commanddefs.tex
+++ b/commanddefs.tex
@@ -80,6 +80,8 @@
 \newcommand{\modopening}{A_{\mathsf{op}}}
 \newcommand{\modlinear}[1]{A_{\mathsf{op,lin}}^{#1}}
 \newcommand{\modencoded}[1]{A_{\mathsf{op}}^{#1}}
+\newcommand{\modopk}{A_{\mathsf{opk}}}
+\newcommand{\modsig}{A_{\mathsf{sig}}}
 
 \newcommand*{\projring}{\proj_{\eta,\limbs}}
 \newcommand*{\decompring}{\decomp_{\eta,\limbs}}
