--- a/sections/onetimesig.tex
+++ b/sections/onetimesig.tex
@@ -13,17 +13,21 @@ The construction presented in this section is a modification of the construction
 
 \gnote{Should define key and signature spaces as $\ring$-modules rather than talking about $\siglen$ and $\opklen$ (and say that what those modules are for our cases), similarly to what HVC def does. The current definition talks about arbitrary rings, for which we did does not define $\ring_q$.}
 \begin{definition}[Key-Homomorphic One-Time Signature]\label{def:hots}
-  Let $\ring$ be a ring.
-  A key-homomorphic one-time signature scheme (KOTS) over $\ring$ with public key length $\opklen$ and signature length $\siglen$ is defined by four PPT algorithms $\hots=(\setup,\kgen,\sign,\verify)$.
+  Let $\ring$ be a ring. Let $\modopk$ and $\modsig$ be $\ring$-modules denoting the spaces where the public keys and signatures are from.
+  A key-homomorphic one-time signature scheme (KOTS) over $\ring$ with public key space $\modopk$ and signatures from $\modsig$
+%   $\opklen$ and signature length $\siglen$ 
+  is defined by six PPT algorithms $\hots=(\setup,\kgen,\sign,\iverify, \sverify, \wverify)$.
   \begin{description}
     \item[$\params\gets\setup(\secparam)$] The setup algorithm takes as input the security parameter and outputs public parameters.
-    \item[$(\osk,\opk) \gets \kgen(\params)$] The key generation algorithm takes as input the public parameters and outputs a key pair with $\opk\in\ring_q^\opklen$.
-    \item[$\vec{\sigma} \gets \sign(\params,\osk,m)$] The signing algorithm takes as input the public parameters, a one-time signing key, and a message and outputs a signature $\sigma\in\ring_q^\siglen$.
+    \item[$(\osk,\opk) \gets \kgen(\params)$] The key generation algorithm takes as input the public parameters and outputs a key pair with $\opk\in\modopk$.
+    \item[$\vec{\sigma} \gets \sign(\params,\osk,m)$] The signing algorithm takes as input the public parameters, a one-time signing key, and a message and outputs a signature $\sigma\in\modsig$.
     \item[$b\gets \iverify(\params,\opk,m,\sigma)$] The individual verification algorithm takes as input the public parameters, a verification key, a message, and a candidate signature and outputs a bit indicating acceptance/rejection.
     \item[$b\gets \sverify(\params,\opk,m,\sigma)$] The strong verification algorithm has the same input and output domains as the individual verification algorithm.
     \item[$b\gets \wverify(\params,\opk,m,\sigma)$] The weak verification algorithm has the same input and output domains as the individual verification algorithm.
   \end{description}
 \end{definition}
+Note that for us, we will always have $\ring = \ZZ[X]/\langle X^n+1\rangle$ for $n$ a power of two and $\modsig = \ring_{q'}^\siglen$, $\modopk = \ring_{q'}^\opklen$ for some prime $q'$.
+
 \begin{definition}[Individual Correctness]
 Let $\hots$ be a key-homorphic one-time signature scheme.
 $\hots$ is individually correct, if for all security parameters $\secpar\in\NN$, parameters $\params \gets \setup(\secparam)$, key pairs $(\osk,\opk) \gets \kgen(\params)$, messages $m\in\bin^*$, and signatures $\vec{\sigma} \gets \sign(\params,\osk,m)$ it holds that
@@ -36,10 +40,10 @@ We require that individually verifying signatures can be homomorphically aggrega
 Such aggregated signatures should still \emph{strongly} verify with high probability over the choice of the random linear combination.
 
 \begin{definition}[Probabilistic Homomorphism]
-  Let $\hots$ be a one-time signature scheme with public key length $\opklen$ and signature length $\siglen$.
+  Let $\hots$ be a one-time signature scheme over a ring $\ring$ with public key space $\modopk$ and signatures from $\modsig$.
   Let $\rho,\varepsilon \in \NN$ and $W\subseteq \ring$.
   $\hots$ is $(\rho,W,\varepsilon)$-probabilistically homomorphic, if 
-  for all security parameters $\secpar\in\NN$, number of aggregated signatures $\ell\in[\rho]$, parameters $\params \gets \setup(\secparam)$, public keys $\opk^i \in \ring_q^\opklen$, messages $m\in\bin^*$ and signatures $\vec{\sigma}^i\in\ring_q^{\siglen}$ with $\iverify(\params,\opk^i,m,\vec{\sigma}^i)$ it holds that
+  for all security parameters $\secpar\in\NN$, number of aggregated signatures $\ell\in[\rho]$, parameters $\params \gets \setup(\secparam)$, public keys $\opk^i \in \modopk$, messages $m\in\bin^*$ and signatures $\vec{\sigma}^i\in\modsig$ with $\iverify(\params,\opk^i,m,\vec{\sigma}^i)$ it holds that
   \[
     \Pr\mleft[
       w^1,\dots,w^\ell\gets W
@@ -54,8 +58,8 @@ For any two, even maliciously generated, signatures that \emph{strongly} verify 
 
 \begin{definition}[Robust Homomorphism]
   \label{def:malhomhots}
-  Let $\hots$ be a key-homomorphic one-time signature scheme with public key length $\opklen$ and signature length $\siglen$.
-  $\hots$ is robustly homomorphic if for all security parameters $\secpar\in\NN$, public parameters $\params\gets\setup(\secparam)$, messages $m\in\bin^*$, (possibly malformed) public keys $\opk^0,\opk^1 \in \ring_q^\opklen$, and (possibly malformed) signatures $\vec{\sigma}^0,\vec{\sigma}^1\in\ring_q^\siglen$ with
+  Let $\hots$ be a key-homomorphic one-time signature scheme over a ring $\ring$ with public key space $\modopk$ and signatures from $\modsig$.
+  $\hots$ is robustly homomorphic if for all security parameters $\secpar\in\NN$, public parameters $\params\gets\setup(\secparam)$, messages $m\in\bin^*$, (possibly malformed) public keys $\opk^0,\opk^1 \in \modopk$, and (possibly malformed) signatures $\vec{\sigma}^0,\vec{\sigma}^1\in\modsig$ with
   \[
     \sverify(\params,\opk^0, m,\vec{\sigma}^0)=1 \quad \text{and} \quad \sverify(\params,\opk^1, m,\vec{\sigma}^1)=1
   \]
@@ -92,7 +96,7 @@ The following definition of a multi-user version of (one-time) existential unfor
 \begin{pcvstack}[center,boxed]
 \begin{pchstack}[center]
   \procedure{$\setup(\secparam)$}{
-    \vec{a} \gets \ring_q^\gamma\\
+    \vec{a} \gets \ring_{q'}^\gamma\\
     \pcreturn \vec{a}
   }
   \pchspace
@@ -138,7 +142,9 @@ The following definition of a multi-user version of (one-time) existential unfor
 \end{pcvstack}
 \caption{%
 Description of our key-homomorphic one-time signature scheme.
-$H$ is a collision-resistant hash function mapping bit-strings to $\tern_{\alpha_H}$.%
+$H$ is a collision-resistant hash function mapping bit-strings to $\tern_{\alpha_H}$.
+Our key space is $\modopk = \ring_{q'}^{2\gamma}$.
+The signature space is $\modsig = \ring_{q'}^\gamma$.
 }
 \label{fig:otsconstruction}
 \end{figure}
@@ -150,10 +156,10 @@ This is beneficial, because the security proof partially relies on fact that the
 With a larger secret key-space the compression ratio increases, allowing us to reduce the size of other parameters, ultimately decreasing the size of the signatures.
 
 \begin{theorem}\label{theo:kots}
-Let $\secpar, \varepsilon, \alpha_w$, $\alpha_H$, $\delta$, $\varphi$, $\gamma$, $\rho$, $\beta_\sigma$, $n$, $q$ be integers such that $q$ is prime and $q > 16\alpha_w\alpha_H\varphi$, $n$ is a power of two, $2^{2\secpar}\leq \tern_{\alpha_H} \leq 2^{2\secpar+\delta}$, $\beta_\sigma \geq 4\varphi\alpha_H\sqrt{\tfrac{1}{2}\alpha_w\rho(\varepsilon+1+\log_2n\gamma)\cdot\ln2}$, and $\gamma\geq((3\secpar+\delta)/n+\log_2q)\log^{-1}_2(\varphi+\tfrac{1}{2})$.
+Let $\secpar, \varepsilon, \alpha_w$, $\alpha_H$, $\delta$, $\varphi$, $\gamma$, $\rho$, $\beta_\sigma$, $n$, $q'$ be integers such that $q'$ is prime and $q' > 16\alpha_w\alpha_H\varphi$, $n$ is a power of two, $2^{2\secpar}\leq \tern_{\alpha_H} \leq 2^{2\secpar+\delta}$, $\beta_\sigma \geq 4\varphi\alpha_H\sqrt{\tfrac{1}{2}\alpha_w\rho(\varepsilon+1+\log_2n\gamma)\cdot\ln2}$, and $\gamma\geq((3\secpar+\delta)/n+\log_2q')\log^{-1}_2(\varphi+\tfrac{1}{2})$.
 Let $H : \bin^* \to \tern_{\alpha_H}$ be a hash function.
 Let $W' = \{w_0-w_1\mid w_0,w_1\in\tern_{\alpha_w} \land w_0\neq w_1\}$.
-If the $\sis_{\ring,q,\gamma,2\beta_\sigma+4\alpha_w\alpha_H\varphi}$ problem is hard and $H$ is collision resistant, then the construction from~\autoref{fig:otsconstruction} is an individually correct, $(\rho,\tern_{\alpha_w},\varepsilon)$-probabilistically homomorphic, robustly homomorphic KOTS that is $W'$-multi-user existentially unforgeable under rerandomized keys.
+If the $\sis_{\ring,q',\gamma,2\beta_\sigma+4\alpha_w\alpha_H\varphi}$ problem is hard and $H$ is collision resistant, then the construction from~\autoref{fig:otsconstruction} is an individually correct, $(\rho,\tern_{\alpha_w},\varepsilon)$-probabilistically homomorphic, robustly homomorphic KOTS that is $W'$-multi-user existentially unforgeable under rerandomized keys.
 \end{theorem}
 \begin{proof}
 The theorem follows from \autoref{lem:kots_ind_correct}, \autoref{lem:kots_correct}, \autoref{lem:kots_homomorphic}, and \autoref{lem:kots_sis}.\qed
@@ -161,8 +167,8 @@ The theorem follows from \autoref{lem:kots_ind_correct}, \autoref{lem:kots_corre
 
 The following four lemmas state that our construction satisfies the desired homomorphic properties and that it is unforgeable.
 \begin{lemma}\label{lem:kots_ind_correct}
-Let $\secpar, \varepsilon, \alpha_w$, $\alpha_H$, $\varphi$, $\gamma$, $\rho$, $\beta_\sigma,n,q$ be positive integers, such that $n$ is a power of two, $q$ is prime.
-  Let $\ring_q$ be the polynomial ring $\ZZ_q[x]/\langle x^n+1\rangle$.
+Let $\secpar, \varepsilon, \alpha_w$, $\alpha_H$, $\varphi$, $\gamma$, $\rho$, $\beta_\sigma,n,q'$ be positive integers, such that $n$ is a power of two, $q'$ is prime.
+  Let $\ring_{q'}$ be the polynomial ring $\ZZ_{q'}[x]/\langle x^n+1\rangle$.
 Let $H : \bin^* \to \tern_{\alpha_H}$ be a hash function.
   Then the construction from \autoref{fig:otsconstruction} is a individually correct one time signature scheme.
 \end{lemma}
